# loop-troop

./: .env.example  LICENSE.md  README.md  pyproject.toml
benchmarks/: loop_troop.toml
docs/: quickstart.md
docs/architecture/: ADR-0001-air-gap-security-model.md  ADR-0002-recursive-epic-decomposition.md
docs/backlog/: epic-1-sync-daemon-and-shadow-log.md  epic-2-data-contracts-and-context-engineering.md  epic-3-architect-and-adr-subflows.md  epic-4-coder-sandbox-and-merge-conflicts.md  epic-5-observability-dx-and-bakeoff-cli.md
docs/backlog/epic-1/: 00-overview.md  01-github-api-polling-client.md  02-sqlite-shadow-log.md  03-tier1-dispatcher-label-waterfall.md  04-sync-daemon-main-loop.md
docs/backlog/epic-2/: 00-overview.md  01-pydantic-schemas.md  02-repomix-context-hydration.md  03-workspace-isolation.md  04-instructor-ollama-client.md
docs/backlog/epic-3/: 00-overview.md  01-adr-parser.md  02-architect-planner.md  (+2 more)
src/loop_troop/: __init__.py  architect.py  cli.py  coder.py  config.py  daemon.py  dispatcher.py  docker_sandbox.py  eval.py  execution.py  replay.py  reviewer.py  shadow_log.py
src/loop_troop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_adr_loader.py  test_architect.py  test_cli.py  test_coder.py  test_config.py  test_conflict_resolver.py  test_context_hydrator.py  test_daemon.py  test_dispatcher.py  test_docker_sandbox.py  test_eval.py  test_github_client.py  test_inner_loop.py  test_llm_client.py  test_metrics.py  test_reviewer.py  test_schemas.py  test_shadow_log.py  test_workspace_manager.py
(+20 files in other folders)
