[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-troop"
version = "0.1.0"
description = "Polling-based GitHub automation tooling for Loop Troop."
requires-python = ">=3.11"
dependencies = [
  "httpx==0.28.1",
  "instructor==1.15.1",
  "openai==2.32.0",
  "pydantic==2.13.3",
]

[project.optional-dependencies]
test = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
]

[project.scripts]
loop-troop-daemon = "loop_troop.daemon:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
